# llvm-hackme

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  INTERNALS.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.opencode/agents/: hack-crash.md  hack-miscomp.md  hack.md
.opencode/tools/: hack_alive2.ts  hack_baseline_opt.ts  hack_context.ts  hack_pr_opt.ts  hack_submit.ts  hack_submit_crash.ts  hack_submit_miscompilation.ts  hack_z3.ts
fuzz_tools/: CMakeLists.txt  mutate.cpp
llvm_hackme/: __init__.py  builds.py  commands.py  config.py  fuzzer.py  github.py  llm_review.py  log_render.py  models.py  passes.py  paths.py  reporting.py  reproduce.py  scanner.py  service.py  state.py  tui.py  verification.py
tests/: test_commands.py  test_config.py  test_fuzzer.py  test_github.py  test_llm_review.py  test_log_render.py  test_models.py  test_paths.py  test_reporting.py  test_reproduce.py  test_scanner.py  test_service.py  test_state.py  test_tui.py  test_verification.py
