[project]
name = "llvm-hackme"
version = "0.1.0"
description = "Automated LLVM PR correctness checker for InstCombine changes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.0",
  "openai>=1.99.0",
  "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["llvm_hackme*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
